fix: overflowing displaying

--- a/styles.css
+++ b/styles.css
@@ -28,9 +28,9 @@ h1 {
   border: 1px solid gray;
   text-align: right;
   font-size: 48px;
-  min-height: 58px;
-  max-width: 100%;
-  overflow-x: scroll;
+  min-height: 60px;
+  width: 273px;
+  overflow-x: auto;
 }
 
 #rows {
